--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
+	"semi": false,
 	"useTabs": true,
 	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
+	"trailingComma": "all",
 	"plugins": ["prettier-plugin-svelte"],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }],
+	"svelteSortOrder": "options-markup-styles-scripts"
 }
