--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sanity/vision": "^3.53.0",
+		"dotenv": "^16.4.5",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"sanity": "^3.53.0",
