--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sanity/dashboard": "^4.0.0",
 		"@sanity/vision": "^3.53.0",
 		"dotenv": "^16.4.5",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"sanity": "^3.53.0",
+		"sanity-plugin-dashboard-widget-vercel": "^2.0.1",
 		"styled-components": "^6.1.12"
 	}
 }
