--- a/package.json
+++ b/package.json
@@ -30,11 +30,17 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@portabletext/svelte": "^2.1.11",
+		"@sanity/client": "^6.21.2",
 		"@sanity/dashboard": "^4.0.0",
+		"@sanity/svelte-loader": "^1.11.35",
 		"@sanity/vision": "^3.53.0",
+		"@sanity/visual-editing": "^2.1.8",
 		"dotenv": "^16.4.5",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-icons": "^5.2.1",
+		"rxjs": "^7.8.1",
 		"sanity": "^3.53.0",
 		"sanity-plugin-dashboard-widget-vercel": "^2.0.1",
 		"styled-components": "^6.1.12"
