--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
 	"useTabs": true,
 	"singleQuote": true,
 	"trailingComma": "all",
-	"plugins": ["prettier-plugin-svelte"],
+	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }],
 	"svelteSortOrder": "options-markup-styles-scripts"
 }
