--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"postcss": "^8.4.41",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.6.6",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.9",
@@ -31,6 +32,7 @@
 	"type": "module",
 	"dependencies": {
 		"@portabletext/svelte": "^2.1.11",
+		"@sanity/asset-utils": "^1.3.0",
 		"@sanity/client": "^6.21.2",
 		"@sanity/dashboard": "^4.0.0",
 		"@sanity/image-url": "^1.0.2",
@@ -38,13 +40,16 @@
 		"@sanity/ui": "^2.8.8",
 		"@sanity/vision": "^3.53.0",
 		"@sanity/visual-editing": "^2.1.8",
+		"clsx": "^2.1.1",
 		"dotenv": "^16.4.5",
+		"octokit": "^4.0.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.2.1",
 		"rxjs": "^7.8.1",
 		"sanity": "^3.53.0",
 		"sanity-plugin-dashboard-widget-vercel": "^2.0.1",
-		"styled-components": "^6.1.12"
+		"styled-components": "^6.1.12",
+		"tailwind-merge": "^2.5.0"
 	}
 }
