--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@iconify/svelte": "^4.0.2",
 		"@portabletext/svelte": "^2.1.11",
 		"@sanity/asset-utils": "^1.3.0",
 		"@sanity/client": "^6.21.2",
